Remove Apache Commons IO